--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mind-Mapper AI — Sophisticated MBTI Personality Analyst</title>
+  <title>Mind‑Mapper AI — Sophisticated MBTI Personality Analyst</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:wght@700;800&display=swap" rel="stylesheet" />
@@ -33,7 +33,7 @@
     /* Header */
     header{ position:sticky; top:16px; z-index:50; display:flex; gap:16px; align-items:center; justify-content:space-between; margin:16px auto 0; max-width:1200px; padding:12px 16px; border-radius:999px; background:linear-gradient(180deg, rgba(255,255,255,.10), rgba(255,255,255,.06)); -webkit-backdrop-filter:blur(14px) saturate(140%); backdrop-filter:blur(14px) saturate(140%); border:1px solid var(--glass-stroke); box-shadow:0 8px 28px rgba(0,0,0,.25); }
     .brand{display:flex; align-items:center; gap:12px}
-    .brand img{width:40px; height:40px; object-fit:contain; border-radius:8px; box-shadow:0 6px 16px rgba(0,0,0,.35)}
+    .brand img{width:120px; height:40px; object-fit:contain; border-radius:8px; box-shadow:0 6px 16px rgba(0,0,0,.35)}
     .brand h1{margin:0; font-family:'Playfair Display',serif; font-weight:800; font-size:20px; letter-spacing:.3px}
     nav ul{margin:0; padding:0; list-style:none; display:flex; gap:8px; align-items:center}
     nav a{ color:var(--fg); text-decoration:none; font-weight:600; font-size:14px; letter-spacing:.3px; padding:10px 14px; border-radius:999px; position:relative; overflow:hidden; }
@@ -112,8 +112,8 @@
 
   <header>
     <div class="brand">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Tsinghua_University_Logo.svg/120px-Tsinghua_University_Logo.svg.png" alt="Tsinghua" />
-      <h1>Mind-Mapper AI</h1>
+      <img src="Tsinghua_University_logo_and_wordmark_in_Chinese_and_English_characters.svg.png" alt="Tsinghua" />
+      <h1>Mind‑Mapper AI</h1>
     </div>
     <nav>
       <ul>
@@ -141,20 +141,18 @@
           <span data-lang="vi">Trò chuyện MBTI tinh tế — dành cho học sinh, sinh viên</span>
         </h2>
         <p class="subtitle">
-          <span data-lang="en">A warm, human-like conversation that reveals strengths, tendencies, and growth tips.</span>
+          <span data-lang="en">A warm, human‑like conversation that reveals strengths, tendencies, and growth tips.</span>
           <span data-lang="vi">Một cuộc trò chuyện ấm áp, tự nhiên để hé lộ thế mạnh, xu hướng và gợi ý phát triển.</span>
         </p>
         <p class="lead">
-          <span data-lang="en">No rigid multiple-choice. Just natural chat. When you're ready, open the assistant below and start talking. After a brief exchange, you'll get a thoughtful MBTI-style profile, confidence level, and practical suggestions.</span>
+          <span data-lang="en">No rigid multiple‑choice. Just natural chat. When you're ready, open the assistant below and start talking. After a brief exchange, you'll get a thoughtful MBTI‑style profile, confidence level, and practical suggestions.</span>
           <span data-lang="vi">Không cần trắc nghiệm cứng nhắc — chỉ trò chuyện tự nhiên. Khi sẵn sàng, mở trợ lý và bắt đầu. Chỉ sau vài tin nhắn, bạn sẽ nhận được hồ sơ MBTI ngắn gọn, mức độ tự tin và các gợi ý thực tiễn.</span>
         </p>
         <a class="cta" href="#how"><span data-lang="en">Begin your journey</span><span data-lang="vi">Bắt đầu hành trình</span> →</a>
       </div>
       <div class="illustrationWrap">
         <div class="card3d" id="card3d">
-          <img class="hero-img" src="https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?q=80&w=1470&auto=format&fit=crop" alt="Students collaborating"/>
-          <span class="revealMask" aria-hidden="true"></span>
-          <span class="badge"><span data-lang="en">Welcome, Vietnam 🇻🇳</span><span data-lang="vi">Xin chào Việt Nam 🇻🇳</span></span>
+          <img class="hero-img" src="vietnam_students.png"/>
         </div>
       </div>
     </section>
@@ -176,7 +174,7 @@
         <div class="step">
           <span class="n">3</span>
           <h3><span data-lang="en">Receive your profile</span><span data-lang="vi">Nhận hồ sơ của bạn</span></h3>
-          <p><span data-lang="en">Get a concise MBTI-style type with confidence, traits, and friendly development tips.</span><span data-lang="vi">Nhận kiểu MBTI, mức tự tin, đặc trưng nổi bật và gợi ý phát triển.</span></p>
+          <p><span data-lang="en">Get a concise MBTI‑style type with confidence, traits, and friendly development tips.</span><span data-lang="vi">Nhận kiểu MBTI, mức tự tin, đặc trưng nổi bật và gợi ý phát triển.</span></p>
         </div>
       </div>
     </section>
@@ -184,8 +182,8 @@
     <section class="section" id="about">
       <h2><span data-lang="en">About Group 61</span><span data-lang="vi">Về Nhóm 61</span></h2>
       <p class="muted">
-        <span data-lang="en">We are Group 61 from Tsinghua University's IEDE 2025 program. Mind-Mapper AI was born from our passion to use technology for self-awareness and growth.</span>
-        <span data-lang="vi">Chúng tôi là Nhóm 61 của chương trình IEDE 2025 (ĐH Thanh Hoa). Mind-Mapper AI xuất phát từ niềm đam mê ứng dụng công nghệ để thúc đẩy tự nhận thức và phát triển bản thân.</span>
+        <span data-lang="en">We are Group 61 from Tsinghua University's IEDE 2025 program. Mind‑Mapper AI was born from our passion to use technology for self‑awareness and growth.</span>
+        <span data-lang="vi">Chúng tôi là Nhóm 61 của chương trình IEDE 2025 (ĐH Thanh Hoa). Mind‑Mapper AI xuất phát từ niềm đam mê ứng dụng công nghệ để thúc đẩy tự nhận thức và phát triển bản thân.</span>
       </p>
       <p class="muted" style="margin-top:10px">
         <span data-lang="en">Our goal is to make personality analysis accessible, engaging, and modern for students.</span>
@@ -197,15 +195,15 @@
       <h2>FAQ</h2>
       <details>
         <summary><span data-lang="en">What is the MBTI?</span><span data-lang="vi">MBTI là gì?</span></summary>
-        <p><span data-lang="en">The Myers-Briggs Type Indicator describes preferences in how people perceive information and make decisions, grouping into 16 types.</span><span data-lang="vi">MBTI mô tả khuynh hướng trong cách con người tiếp nhận thông tin và ra quyết định, phân loại thành 16 kiểu tính cách.</span></p>
+        <p><span data-lang="en">The Myers‑Briggs Type Indicator describes preferences in how people perceive information and make decisions, grouping into 16 types.</span><span data-lang="vi">MBTI mô tả khuynh hướng trong cách con người tiếp nhận thông tin và ra quyết định, phân loại thành 16 kiểu tính cách.</span></p>
       </details>
       <details>
         <summary><span data-lang="en">Is this a clinical assessment?</span><span data-lang="vi">Đây có phải đánh giá lâm sàng?</span></summary>
-        <p><span data-lang="en">No—it's a self-reflection tool powered by AI. Use it for guidance, not diagnosis.</span><span data-lang="vi">Không—đây là công cụ tự phản chiếu do AI hỗ trợ. Dùng để tham khảo, không phải chẩn đoán.</span></p>
+        <p><span data-lang="en">No—it's a self‑reflection tool powered by AI. Use it for guidance, not diagnosis.</span><span data-lang="vi">Không—đây là công cụ tự phản chiếu do AI hỗ trợ. Dùng để tham khảo, không phải chẩn đoán.</span></p>
       </details>
       <details>
         <summary><span data-lang="en">Is my data private and secure?</span><span data-lang="vi">Dữ liệu của tôi có riêng tư và an toàn?</span></summary>
-        <p><span data-lang="en">On-device mode keeps text in your browser. If you switch to a cloud model, text is sent only to that provider.</span><span data-lang="vi">Chế độ chạy tại chỗ giữ văn bản trong trình duyệt. Nếu dùng mô hình đám mây, nội dung chỉ gửi tới nhà cung cấp đó.</span></p>
+        <p><span data-lang="en">On‑device mode keeps text in your browser. If you switch to a cloud model, text is sent only to that provider.</span><span data-lang="vi">Chế độ chạy tại chỗ giữ văn bản trong trình duyệt. Nếu dùng mô hình đám mây, nội dung chỉ gửi tới nhà cung cấp đó.</span></p>
       </details>
       <details>
         <summary><span data-lang="en">How long does it take?</span><span data-lang="vi">Mất bao lâu?</span></summary>
@@ -234,14 +232,14 @@
   </main>
 
   <!-- Chat launcher and panel -->
-  <button class="chat-launch" id="chatOpen" title="Open Mind-Mapper AI"> 🧠 <b><span data-lang="en">Chat</span><span data-lang="vi">Trò chuyện</span></b> </button>
+  <button class="chat-launch" id="chatOpen" title="Open Mind‑Mapper AI"> 🧠 <b><span data-lang="en">Chat</span><span data-lang="vi">Trò chuyện</span></b> </button>
   <div class="chat-panel open" id="chatPanel" aria-live="polite">
     <div class="chat-head">
-      <h3>Mind-Mapper AI — Personality Analyst</h3>
+      <h3>Mind‑Mapper AI — Personality Analyst</h3>
       <div class="model-select"><span>Model: OpenRouter (secure)</span></div>
     </div>
     <div class="chat-body" id="chatBody">
-      <div class="msg ai"><div class="bubble"><span data-lang="en">Hi! I’m your MBTI-style personality analyst. Share how you approach studying, friends, and decisions. I’ll reflect back patterns and, when you’re ready, I can infer a type with a confidence score.</span><span data-lang="vi">Xin chào! Tôi là trợ lý phân tích tính cách theo MBTI. Hãy chia sẻ cách bạn học tập, kết bạn và ra quyết định. Tôi sẽ phản hồi những mẫu hành vi và khi bạn sẵn sàng, tôi có thể suy luận kiểu MBTI kèm mức độ tự tin.</span></div></div>
+      <div class="msg ai"><div class="bubble"><span data-lang="en">Hi! I’m your MBTI‑style personality analyst. Share how you approach studying, friends, and decisions. I’ll reflect back patterns and, when you’re ready, I can infer a type with a confidence score.</span><span data-lang="vi">Xin chào! Tôi là trợ lý phân tích tính cách theo MBTI. Hãy chia sẻ cách bạn học tập, kết bạn và ra quyết định. Tôi sẽ phản hồi những mẫu hành vi và khi bạn sẵn sàng, tôi có thể suy luận kiểu MBTI kèm mức độ tự tin.</span></div></div>
     </div>
     <div class="chat-foot">
       <input id="chatInput" placeholder="Type your message…" />
@@ -250,7 +248,7 @@
     <div class="notice" style="padding:8px 12px">Tip: After a few messages, type <b>"Give me my MBTI"</b>.</div>
   </div>
 
-  <!-- WebLLM runtime (on-device free LLM) --><script>
+  <!-- WebLLM runtime (on‑device free LLM) --><script>
     // Sparkles
     (function makeSparkles(){ const host=document.getElementById('sparkles'); for(let i=0;i<120;i++){ const s=document.createElement('i'); s.style.left=Math.random()*100+'vw'; s.style.top=(100+Math.random()*100)+'vh'; s.style.animationDuration=(10+Math.random()*16)+'s'; host.appendChild(s);} })();
 
@@ -274,39 +272,30 @@
     const input=document.getElementById('chatInput');
     const sendBtn=document.getElementById('sendBtn');
     
-    const SYSTEM_PROMPT=`You are Mind-Mapper AI, a warm, insightful personality analyst for students.\n1) Ask brief, empathetic questions to understand the user across MBTI axes: (E/I), (S/N), (T/F), (J/P).\n2) Reflect patterns you notice, citing examples from their messages in plain language.\n3) When the user asks for their MBTI or after 6+ user messages, infer a 4-letter type with a confidence %, and give 4–6 practical tips for study, teamwork, and wellbeing.\n4) Be unbiased and supportive. Keep answers under 180 words unless asked to go deeper.`;
+    const SYSTEM_PROMPT=`You are Mind‑Mapper AI, a warm, insightful personality analyst for students.\n1) Ask brief, empathetic questions to understand the user across MBTI axes: (E/I), (S/N), (T/F), (J/P).\n2) Reflect patterns you notice, citing examples from their messages in plain language.\n3) When the user asks for their MBTI or after 6+ user messages, infer a 4‑letter type with a confidence %, and give 4–6 practical tips for study, teamwork, and wellbeing.\n4) Be unbiased and supportive. Keep answers under 180 words unless asked to go deeper.`;
 
     function appendMessage(role, text){ const wrap=document.createElement('div'); wrap.className='msg '+(role==='user'?'user':'ai'); wrap.innerHTML=`<div class="bubble">${text.replace(/</g,'&lt;')}</div>`; chatBody.appendChild(wrap); chatBody.scrollTop=chatBody.scrollHeight; }
 
-    async function respondOpenRouter(text){
+        async function respondOpenRouter(text){
       const messages=[{role:'system', content:SYSTEM_PROMPT}];
-      document.querySelectorAll('.msg').forEach(n=>{ const isUser=n.classList.contains('user'); const t=n.querySelector('.bubble').innerText; messages.push({role=isUser?'user':'assistant', content:t}); });
+      document.querySelectorAll('.msg').forEach(n=>{ const isUser=n.classList.contains('user'); const t=n.querySelector('.bubble').innerText; messages.push({role:isUser?'user':'assistant', content:t}); });
       messages.push({role:'user', content:text});
-      const res = await fetch('https://group61project.netlify.app/.netlify/functions/chat', {
+      const res=await fetch('/.netlify/functions/chat',{
         method:'POST',
         headers:{ 'Content-Type':'application/json' },
         body:JSON.stringify({ model:'meta-llama/llama-3.1-8b-instruct:free', messages, temperature:0.6, max_tokens:400 })
       });
-
-      // Show real server errors instead of a generic message
-      const raw = await res.text();
-      let out = 'Sorry, no response.';
-      try {
-        const json = JSON.parse(raw);
-        out = json.choices?.[0]?.message?.content
-           || json.error?.message
-           || out;
-      } catch {
-        out = raw || out; // non-JSON response
-      }
+      const json=await res.json();
+      const out=json.choices?.[0]?.message?.content || 'Sorry, no response.';
       appendMessage('assistant', out);
     }
 
-    async function handleSend(){ const text=input.value.trim(); if(!text) return; input.value=''; appendMessage('user', text); try{ await respondOpenRouter(text); }catch(err){ console.error(err); appendMessage('assistant','I hit a snag.'); } }
+    async function handleSend(){ const text=input.value.trim(); if(!text) return; input.value=''; appendMessage('user', text); try{ await respondOpenRouter(text); }catch(err){ console.error(err); appendMessage('assistant','I hit a snag. If your browser lacks WebGPU, try the cloud model (set your API key).'); } }
 
     sendBtn.addEventListener('click', handleSend);
     input.addEventListener('keydown', e=>{ if(e.key==='Enter' && !e.shiftKey){ e.preventDefault(); handleSend(); }});
   </script>
 </body>
 </html>
+
 
