--- a/index.html
+++ b/index.html
@@ -362,10 +362,10 @@
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ 
-            model: 'meta-llama/llama-3.1-8b-instruct:free', 
+            model: 'microsoft/phi-3-medium-128k-instruct:free', 
             messages, 
-            temperature: 0.6, 
-            max_tokens: 400 
+            temperature: 0.7, 
+            max_tokens: 500 
           })
         });
         
