--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     *{box-sizing:border-box}
     html{scroll-behavior:smooth}
     /* --- FIX 1: The body background is made transparent to see the sparkles behind it --- */
-    body{ margin:0; color:var(--fg); background:transparent; font-family:'Poppins',system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial; overflow-x:hidden; }
+    body{ margin:0; color:var(--fg); background:transparent; font-family:'Poppins',system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial; overflow-x:hidden;  padding-top: 112px; }
 
     /* Bilingual helpers */
     [data-lang]{display:none}
@@ -34,7 +34,7 @@
     @keyframes twinkle { 0% { opacity: .3; filter: blur(.3px) brightness(0.9); } 100% { opacity: 1; filter: blur(.3px) brightness(1.1); } } 100%{opacity:1; transform:scale(1.2)}}
 
     /* Header */
-    header{ position:sticky; top:16px; z-index:50; display:flex; gap:16px; align-items:center; justify-content:space-between; margin:16px auto 0; max-width:1200px; padding:12px 16px; border-radius:999px; background:linear-gradient(180deg, rgba(255,255,255,.10), rgba(255,255,255,.06)); -webkit-backdrop-filter:blur(14px) saturate(140%); backdrop-filter:blur(14px) saturate(140%); border:1px solid var(--glass-stroke); box-shadow:0 8px 28px rgba(0,0,0,.25); }
+    header{ position: fixed; top: 16px; z-index:50; display:flex; gap:16px; align-items:center; justify-content:space-between; margin:16px auto 0; max-width: min(1100px, calc(100% - 32px)); padding:12px 16px; border-radius:999px; background:linear-gradient(180deg, rgba(255,255,255,.10), rgba(255,255,255,.06)); -webkit-backdrop-filter:blur(14px) saturate(140%); backdrop-filter:blur(14px) saturate(140%); border:1px solid var(--glass-stroke); box-shadow:0 8px 28px rgba(0,0,0,.25);  left: 50%;  transform: translateX(-50%); }
     .brand{display:flex; align-items:center; gap:12px}
     .brand img{width:120px; height:40px; object-fit:contain; border-radius:8px; box-shadow:0 6px 16px rgba(0,0,0,.35)}
     .brand h1{margin:0; font-family:'Playfair Display',serif; font-weight:800; font-size:20px; letter-spacing:.3px}
