--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div>
         <h2 class="title">
           <span data-lang="en">Conversational MBTI Personality Insights – refined for students</span>
-          <span data--lang="vi">Trò chuyện MBTI tinh tế – dành cho học sinh, sinh viên</span>
+          <span data-lang="vi">Trò chuyện MBTI tinh tế – dành cho học sinh, sinh viên</span>
         </h2>
         <p class="subtitle">
           <span data-lang="en">A warm, human-like conversation that reveals strengths, tendencies, and growth tips.</span>
@@ -244,7 +244,7 @@
       <div class="msg ai">
         <div class="bubble">
           <span data-lang="en">Hi! I'm your MBTI-style personality analyst. Share how you approach studying, friends, and decisions. I'll reflect back patterns and, when you're ready, I can infer a type with a confidence score.</span>
-          <span data-lang="vi">Xin chào! Tôi là trợ lý phân tích tính cách theo MBTI. Hãy chia sẻ cách bạn học tập, kết bạn và ra quyết định. Tôi sẽ phản hồi những mẫu hành vi và khi bạn sẵn sàng, tôi có thể suy luận kiểu MBTI kèm mức độ tự tin.</span>
+          <span data-lang="vi">Xin chào! Tôi là trợ lý phân tích tính cách theo MBTI. Hãy chia sẻ cách bạn học tập, kết bạn và ra quyết định. Tôi sẽ phản hồi những mẫu hình vi và khi bạn sẵn sàng, tôi có thể suy luận kiểu MBTI kèm mức độ tự tin.</span>
         </div>
       </div>
     </div>
@@ -312,7 +312,7 @@
           bubble.className = 'bubble';
           
           if (lang === 'vi') {
-            bubble.innerHTML = `<span data-lang="vi">Xin chào! Tôi là trợ lý phân tích tính cách theo MBTI. Hãy chia sẻ cách bạn học tập, kết bạn và ra quyết định. Tôi sẽ phản hồi những mẫu hành vi và khi bạn sẵn sàng, tôi có thể suy luận kiểu MBTI kèm mức độ tự tin.</span>`;
+            bubble.innerHTML = `<span data-lang="vi">Xin chào! Tôi là trợ lý phân tích tính cách theo MBTI. Hãy chia sẻ cách bạn học tập, kết bạn và ra quyết định. Tôi sẽ phản hồi những mẫu hình vi và khi bạn sẵn sàng, tôi có thể suy luận kiểu MBTI kèm mức độ tự tin.</span>`;
           } else {
             bubble.innerHTML = `<span data-lang="en">Hi! I'm your MBTI-style personality analyst. Share how you approach studying, friends, and decisions. I'll reflect back patterns and, when you're ready, I can infer a type with a confidence score.</span>`;
           }
